# attractor_finder

./: .gitignore  README.md  compute.py  functions.py  iterator_cubic.pyx  main.py  print_sizes.json  print_sizes.py  pyproject.toml  render.py  renderer.pyx  run.bat  search.py  setup.py  setup_iterator.py  setup_renderer.py
benchmark/: benchmark.py  benchmark_iterator.py  benchmark_renderer.py
cython/: batch_renderer.pyx  compute.py  functions.py  main.py  render.py  setup.bat  setup_batch_renderer.py
scripts/: main.py  run.bat
src/attractor_finder/: __init__.py  compute.py  functions.py  functions_numba.py  iterator.pyx  render.py  render_class.py  renderer.pyx  renderer_batch.pyx  search.py
test/: test_install.py
