[build-system]
requires = ["setuptools>=65", "wheel", "Cython>=3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "attractor_finder"
version = "0.1.0"
description = "A Python+Cython toolkit for exploring strange attractors."
authors = [{ name = "ebokai" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.cython]
language_level = "3"
annotate = true
build-dir = "cython_build"
